--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "./src/index.js",
   "scripts": {
-    "test": "node ./tests/run-tests.js",
-    "build": "node ./tasks/build.js"
+    "test": "node ./tests/run-tests.js && npm run lint",
+    "lint": "node ./node_modules/standard/bin/cmd | node ./node_modules/snazzy/bin/cmd",
+    "docs": "node ./tasks/docs.js"
   },
   "repository": {
     "type": "git",
@@ -21,8 +22,11 @@
   "devDependencies": {
     "chai": "^3.5.0",
     "mocha": "^2.5.3",
-    "semistandard": "^7.0.5",
     "snazzy": "^2.0.1",
+    "standard": "^7.1.2",
     "yuidocjs": "^0.9.0"
+  },
+  "standard": {
+    "globals": [ "describe", "it", "expect", "before", "after", "beforeEach", "afterEach", "decal"]
   }
 }
