--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "decal",
-  "version": "1.6.3",
+  "version": "1.6.4",
   "description": "",
   "main": "./src/index.js",
   "scripts": {
@@ -27,6 +27,15 @@
     "yuidocjs": "^0.9.0"
   },
   "standard": {
-    "globals": [ "describe", "it", "expect", "before", "after", "beforeEach", "afterEach", "decal"]
+    "globals": [
+      "describe",
+      "it",
+      "expect",
+      "before",
+      "after",
+      "beforeEach",
+      "afterEach",
+      "decal"
+    ]
   }
 }
